# TETHYS-Graphene-Hydrodynamic-Simulation

./: .gitattributes  .gitignore  2DTESTCNPparameters.ini  2DTESTparameters.ini  2DTESTparametersInvis.ini  AnalysisELEC  AnalysisELEC.cpp  BoundaryLib.cpp  BoundaryLib.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  CodigoTesteIvan.tar.xz  Diffusion_1D_Main.cpp  Diffusion_2D_Main.cpp  Documentation.html  Doxyfile  Doxyfile.in  ElectricLib.cpp  ElectricLib.h  ElectronicAnalysis  LICENSE  Makefile  OLDrun_CFL_test.sh  README.md  README.md.backup  Richtmyer  Richtmyer.cpp  RichtmyerHDF5  SaturationAnalysis.gnumeric  TETHYS_1D  TETHYS_1D_ElectronicAnalysis.cpp  TETHYS_1D_Main_v131.cpp  TETHYS_1D_Main_v132.cpp  TETHYS_1D_Main_v133.cpp  TETHYS_1D_Main_v134.cpp  TETHYS_1D_TimeSeries.cpp  TETHYS_2D  TETHYS_2D_Main_v201.cpp  (+115 more)
.github/: labeler.yml
.github/workflows/: ccpp.yml  codeeval.yml  codeql-analysis.yml  compiletest.yml  docs.yml  label.yml  main.yml  runtest.yml  static.yml
1D/: ElectronicAnalysis  Makefile  README.md  RichtmyerHDF5  TETHYS_1D  TETHYS_1D_Main_v132.cpp  TETHYS_1D_Main_v133.cpp  Tethys1DLib.cpp  Tethys1DLib.h  TimeSeries  run_batch.sh  run_single_test.sh
1Dold/: ElectronicAnalysis  TETHYS_1D  TETHYS_1D_Main_v133.cpp  Tethys1DLib.h  TimeSeries  run_cfl_batch.sh
2D/: HDF5plotter.py  TETHYS_2D  TETHYS_2D_Main_v200.cpp  Tethys2DLib.cpp  Tethys2DLib.h  run_cfl_batch_2D.sh
2D_Implementation/: Makefile  plotter.gp
2D_Implementation/2D release version/: Makefile  TETHYS_2D_Main_v200.cpp  Tethys2DLib.cpp  Tethys2DLib.h
2D_Implementation/LibRemake/: TETHYS_1D_v125.cpp  TETHYS_2D_v125.cpp  TethysLib.cpp  TethysLib.h  TimeSeries.cpp
2D_Implementation/code/: 2D_simple_sim.cpp  2Dsim.cpp  TestFunc.cpp
2D_Implementation/data/: random_x0.txt  random_xL.txt  random_xM.txt  random_y0.txt  random_yL.txt  random_yM.txt
2D_Implementation/graphene_first_test/: 2Dsim.cpp  Fluido2D  Graphene2Dsim.cpp  GrapheneFluid2D  Makefile  Tethys2DLib.cpp  Tethys2DLib.h  temp.cpp
2D_Implementation/new_test/: 2Dsim.cpp  Fluido2D  Makefile  TethysLib.cpp  TethysLib.h
2D_Implementation/src/: LaxWen2D.cpp  LaxWen2D.h  TethysLib.cpp  TethysLib.h
2Dold/: TETHYS_2D  hdf5_plotter.py
DataFiles_SINGLE_TEST_2020-05-26_20:02/electronics/: ElectronicAnalysis
LibRemake/: EM_fields.cpp  EM_fields.h  ElectronicAnalysis.cpp  GraphHydro.cpp  GraphHydro.h  Makefile  ObjectOriented.cpp  RichtmyerNEW  RichtmyerTESTE2  TETHYS_1D_v125.cpp  TETHYS_1D_v125_OLD.cpp  TestLib.cpp  TestLib.h  TethysLib.cpp  TethysLib.h  TimeSeries  dyakonovshur.h  run_single_test.sh
analysis/: bode.py  read.py
aux/: DMD_plotter.py  OLD_run_single_test_1D.sh  UML.xmi  hdf5_velocity_stream_plotter.py  run_batch.sh  run_magnetic_batch.sh  run_single_test.sh  run_single_test_2D.sh  run_visco_batch.sh  spectrogram.py  spectrogram_plotter.py
d0/de3/: citelist.html
d0/df4/: _dirichlet_boundary_lib_8h.html  _dirichlet_boundary_lib_8h_source.html
d0/dfa/: _fluid2_d_lib_8h.html  _fluid2_d_lib_8h_source.html
d1/d1e/: numericalmethods.html
d1/d25/: _tethys_math_lib_8h__dep__incl.map  _tethys_math_lib_8h__dep__incl.md5
d1/d37/: _feedback_boundary_lib_8h__incl.map  _feedback_boundary_lib_8h__incl.md5
d1/d5a/: class_set_up_parameters_c_n_p__coll__graph.map  class_set_up_parameters_c_n_p__coll__graph.md5
d1/d84/: class_math_utils.html
d1/db7/: class_graphene_fluid2_d__coll__graph.map  class_graphene_fluid2_d__coll__graph.md5
d1/dd1/: _robin_boundary_lib_8h__incl.map  _robin_boundary_lib_8h__incl.md5
d1/dd9/: class_graphene_fluid1_d.html  class_graphene_fluid1_d.js
d1/de1/: _fluid1_d_lib_8h.html  _fluid1_d_lib_8h_source.html
d1/df2/: struct_physical_parameters-members.html
d1/df3/: _set_up_parameters_lib_8h.html  _set_up_parameters_lib_8h_source.html
d2/d28/: struct_physical_parameters.html
d2/d67/: class_set_up_parameters-members.html
d2/d8e/: class_set_up_parameters_c_n_p.html  (+1 more)
doc/: bib9281.aux  citelist.doc9281  description.md  mainpage.md  numericalmethods.md  references.bib
docs_doxygen/: mainpage.md
docs_sphinx/: Doxyfile.in  conf.py  index.rst
file handling/: CFD.h5  LeituraHDF5.nb  Makefile  RichtmyerHDF5  RichtmyerHDF5.cpp  SDS.h5  TesteNOVO.cpp  Untitled-1.nb  cfd_test.cpp  cfd_test_1D.cpp  create.cpp  dyakonovshur.cpp  h5_CFD  h5_create  h5_test  h5tutr_dset.h5  hdf5_introduction-datatypes.ppt  hdf5_introduction3_software.ppt  hdf5_introduction4_java.ppt  run_processing_time_test.sh
file handling/cmakes/: CMakeLists.txt  myFirstHdf5.cpp
hdf5_2d/: BidimensionalHDF5  Makefile  WriteData  writeMatrix (copy).cpp  writeMatrix.cpp  writedataoriginal.cpp
images/: images.readme
main/: PIC_1.cc
mass flux equations/: Makefile  MomentumSimul  TETHYS_1D_Main_v132P.cpp  Tethys1DLibP.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+31 more)
src/: BerryFluidLib.cpp  BoundaryLib.cpp  BoundaryLib.h  CBLAS_test.cpp  Cell1DLib.cpp  Cell1DLibNOT.cpp  Cell2DLibNOT.cpp  DataLib.cpp  DiffOperatorLib.cpp  DiracGraphene1DLib.cpp  DiracGraphene2DLib.cpp  DiracGraphene2DLibNOT.cpp  DiricheletBoundaryLib.cpp  DirichletBoundaryLib.cpp  DomainLib.cpp  DyakonovShurBoundaryLib.cpp  EdgeLib.cpp  ElectricLib.cpp  ElectricLib.h  ElectricLibNOT.cpp  FeedbackBoundaryLib.cpp  Fluid1DLib.cpp  Fluid2DLib.cpp  FluidCNP2DLibNOT.cpp  GeometryLib.cpp  GrapheneCNPFluid2DLibNOT.cpp  GrapheneFluid1DLib.cpp  GrapheneFluid2DLib.cpp  Grid2DLib.cpp  Grid2DLibNOT.cpp  GridLib.cpp  InitialConditionLib.cpp  RadiationLib.cpp  RadiationLib_w_ROOT.cc  RadiationLib_wo_ROOT.cpp  Richtmyer2DLib.cpp  RobinBoundaryLib.cpp  RobinBoundaryLibNOT.cpp  SetUpParametersLib.cpp  StateVec1DLib.cpp  (+44 more)
(+632 files in other folders)
